# QuranPhoneticSearch

./: README.md  pyproject.toml  requirements.txt
data_preprocessing/: preprocessing.ipynb  quran_words.csv
data_preprocessing/raw_data/: ayahs.csv  quran_transliteration.txt
quran_phonetic_search/: __init__.py  main.py  search.py
